package backend.storage;


public class Inventory {
}
